--- a/pizzashop11/war/WEB-INF/web.xml
+++ b/pizzashop11/war/WEB-INF/web.xml
@@ -40,7 +40,22 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/del</url-pattern>
 	</servlet-mapping>
 	
+	<security-constraint>
+        <web-resource-collection>
+            <web-resource-name>/userauth</web-resource-name>
+            <url-pattern>/userauth/*</url-pattern>
+        </web-resource-collection>
+
+	<auth-constraint>
+            <role-name>*</role-name>
+        </auth-constraint>
+    </security-constraint>
+
 	<welcome-file-list>
 		<welcome-file>first.html</welcome-file>
 	</welcome-file-list>
 </web-app>
+
+
+        
+        
